Replace `getColumnIndex` with `getColumn` for cleaner method calls and improve code readability across the codebase.